kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-diary-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-diary
  template:
    metadata:
      labels:
        app: app-diary
    spec:
      containers:
      - name: app-diary
        image: oydeu/app-diary:latest
        ports:
        - containerPort: 3000
