kube/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: app-diary-service
spec:
  selector:
    app: app-diary
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
