kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-diary-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - diary.data-container.net
    secretName: letsencrypt-app-diary
  rules:
  - host: diary.data-container.net
    http:
      paths:
      - path: /
        backend:
          serviceName: app-diary-service
          servicePort: 80
